# hardware-key

./: .gitignore  CLAUDE.md  FIDO2_HARDWARE_KEY_PROJECT.md  README.md  requirements.txt  test_browser.html  test_hid.py
blink-test/: CMakeLists.txt  main.c
phase1-python-udp/: authenticator.py  crypto.py  test_client.py  test_fido2_client.py
phase2-rp2040/: CMakeLists.txt
phase2-rp2040/bridge/: serial_bridge.py
phase2-rp2040/include/: button.h  crypto.h  ctaphid.h  fido_mbedtls_config.h  storage.h  tusb_config.h  u2f.h
phase2-rp2040/src/: button.c  crypto.c  ctaphid.c  main.c  storage.c  test_crypto.c  u2f.c  usb_descriptors.c
